<resources>
    <string name="app_name">Apni Dukaan</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_in_text">اپنے اکاؤنٹ میں سائن ان کریں</string>
    <string name="phone_number_text">فون نمبر/ای میل</string>
    <string name="password_text">پاس ورڈ</string>
    <string name="keep_me_signed_in">مجھے سائن ان رکھیں</string>
    <string name="sign_in_text_button">سائن ان</string>
    <string name="product_title_temp">سبزی</string>
    <string name="products">مصنوعات</string>
    <string name="tomato_ketchup">ٹماٹو کیچپ</string>
    <string name="place_your_order">ٹوکری میں شامل کریں</string>
    <string name="product_subtitle_temp">100 روپے</string>
    <string name="detail_content_temp">مستحق ہے جو اس اعلان میں بیان کیٔے گیٔے ہیں،
        اور اس حق پر نسل، رنگ، جنس، زبان، مذہب اور سیاسی تفریق کا یا .مستحق ہے جو
        اس اعلان میں بیان کیٔے گیٔے ہیں، اور اس حق پر نسل، رنگ، جنس، زبان، مذہب
        اور سیاسی تفریق کا یا .مستحق ہے جو اس اعلان میں بیان کیٔے گیٔے ہیں،
        اور اس حق پر نسل، رنگ، جنس، زبان، مذہب اور سیاسی تفریق کا یا .</string>


    <string name="audio_recorder">Audio Recorder</string>
    <string name="start_recording">Start Recording</string>
    <string name="stop_recording">Stop Recording</string>
    <string name="play_recording">Play Recording</string>
    <string name="stop_playing">Stop Playing</string>
    <string name="status">Status</string>

    <string-array name="countries_list">
        <item>Pakistan</item>
    </string-array>

    <string name="sign_in_again">اس کام کو انجام دینے کے لیے دوبارہ سائن ان کریں۔</string>
    <string name="please_speak_clearly">صاف آواز میں بات کریں۔</string>
    <string name="please_enter_coupon_code">کوپن کوڈ درج کریں۔</string>
    <string name="submit_coupon">کوڈ جمع کروائیں</string>
    <string name="summary">خلاصہ</string>
    <string name="pkr">روپے</string>
    <string name="credit">کریڈٹ</string>
    <string name="pkr_0"> 0.0 روپے </string>
    <string name="check_internet_connection">اپنا انٹرنیٹ کنیکشن چیک کریں۔</string>
    <string name="fill_in_the_required_fields">خالی خانوں کو بھریں</string>
    <string name="please_wait"> انتظار کریں </string>
    <string name="please_wait_for_cache">براہ کرم انتظار کریں ڈیٹا لوڈ ہو رہا ہے۔</string>
    <string name="select_time_slot"> آرڈر وصول کرنے کا وقت منتخب کریں۔</string>
    <string name="order_placed_failed">اپنی تفصیلات کی تصدیق کریں اور آرڈر کے بٹن کو دوبارہ دبائیں۔</string>
    <string name="order_placed_success">مبارک ہو!!! آپ کا آرڈر کامیابی کے ساتھ درج ہو گیا ہے۔</string>
    <string name="no_more_data_available">مزید اشیاء دستیاب نہیں ہیں۔</string>
    <string name="select_item_before_order">آرڈر درج کرنے سے پہلے ایک آئٹم منتخب کریں۔</string>
    <string name="No_items_in_cart">ٹوکری میں کوئی اشیاء نہیں ہیں۔</string>
    <string name="no_item_found">اس نام کا کوئی آئٹم نہیں ملا۔</string>
    <string name="item_added_to_cart">آئٹم کو ٹوکری میں شامل کر دیا گیا ہے۔</string>
    <string name="proceed_to_checkout">آرڈر جمع کرانے کی طرف بڑھیں۔</string>
    <string name="when_do_you_want_us_to_deliver">آپ کو آرڈر کب پہنچایا جائے؟</string>
    <string name="delivery_comments_note">آرڈر سے متعلق کوئی بھی اہم بات یہاں درج کریں۔</string>
    <string name="any_comments_or_note">کوئی بھی متعلقہ بیان:</string>
    <string name="ship_to">آرڈر کی ترسیل کا پتہ</string>
    <string name="default_shipping_address">پہلے سے طے شدہ پتہ</string>
    <string name="change_shipping_address">آرڈر کی ترسیل کا پتہ تبدیل کریں۔</string>
    <string name="shipping_method">بھیجنے کا طریقہ</string>
    <string name="payment_method">رقم کی ادائیگی کا طریقہ</string>
<!--    <string name="apply_credit_complete"> مکمل رقم کریڈٹ سے اپلائی کریں۔</string>-->
<!--    <string name="apply_credit_partial"> کچھ رقم کریڈٹ سے اپلائی کریں۔</string>-->
     <string name="apply_credit_complete"> مکمل رقم اپلائی کریں۔</string>
    <string name="apply_credit_partial"> کچھ رقم اپلائی کریں۔</string>
    <string name="your_credit_is">آپ کا کریڈٹ ہے :</string>
    <string name="cash_on_delivery">ادائیگی وصولی کے وقت </string>
    <string name="your_order_is_placed_successfully"> آپ کا آرڈر اس آرڈر نمبر کے ساتھ دیا گیا ہے:</string>
    <string name="billing_same_as_shipping">ادائیگی کا پتہ ترسیل کے پتہ جیسا ہی ہے۔</string>
    <string name="cart_summary">ٹوکری کا خلاصہ</string>
    <string name="pay_amount_with_credit">کریڈٹ کے ساتھ ادا کی گئی رقم  :</string>
    <string name="order_amount">آرڈر کی رقم  :</string>
    <string name="amount_left_in_wallet">رقم جو کریڈٹ میں رہ گئی ہے  :</string>
    <string name="place_order">آرڈر بھیج دیں</string>
    <string name="unavailable">unavailable</string>
    <string name="total">کل قیمت</string>
    <string name="shipping">بھیجنے کی لاگت</string>
    <string name="subtotal">ذیلی کل</string>
    <string name="you_saved">بچت :</string>
    <string name="network_connection_issue">اپنا انٹرنیٹ کنکشن درست کریں۔</string>
    <string name="estimated_shipping">تخمینہ شدہ شپنگ</string>
    <string name="estimated_total">تخمینی کل</string>
    <string name="please_wait_data_is_being_cached">براہ کرم انتظار کریں تمام اشیاء کی معلومات آپ کی مشین میں محفوظ ہو رہی ہے۔</string>
    <string name="checkout">چیک آؤٹ</string>
    <string name="cart">ٹوکری</string>
    <string name="record_audio_title">آرڈر ریکارڈ کریں</string>
    <string name="product_detail">تفصیل</string>
    <string name="enter_quantity">آرڈر کے لیے پروڈکٹ کی مقدار درج کریں۔</string>
    <string name="search_it">تلاش کریں</string>
    <string name="enter_the_item_name">آئٹم کا نام</string>
    <string name="cancel">منسوخ</string>
    <string name="ok">ٹھیک ہے</string>
    <string name="coupon_code_is_invalid">کوپن کوڈ درست نہیں ہے۔</string>
</resources>